# nrf51demo

./: CMakeLists.txt
